--- a/Kwetter/KwetterAngular/src/app/app.component.html
+++ b/Kwetter/KwetterAngular/src/app/app.component.html
@@ -1,3 +1,4 @@
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <nav>
   <ul>
     <li><a routerLink="" style="font-weight: bold; font-size: 20px;">{{title}}</a></li>
