--- a/Kwetter/KwetterAngular/src/app/Profile/profile.component.html
+++ b/Kwetter/KwetterAngular/src/app/Profile/profile.component.html
@@ -16,7 +16,11 @@
           <p style="font-weight: bold">Location:</p>
           <p>{{profile.location}}</p>
           <hr>
-          <p><i  *ngIf="currentUserId != profile.id" class="fa fa-user-plus" aria-hidden="true"></i>  <i *ngIf="currentUserId != profile.id" class="fa fa-user-times" aria-hidden="true"></i></p>
+          <p><i *ngIf="currentUserId != profile.id" class="fa fa-user-plus" aria-hidden="true" (click)="LikeProfile()"></i>  <i *ngIf="currentUserId != profile.id" class="fa fa-user-times" aria-hidden="true" (click)="UnLikeProfile()"></i></p>
+          <p style="font-weight: bold">Following</p>
+          <ng-container *ngFor="let follower of profile.following">
+            <p><img src="{{follower.photo}}" style="width:5%">{{follower.name}}</p>
+          </ng-container>
       </div>
       </div>
     </div>
@@ -25,9 +29,9 @@
         <h2 class="w3-text-grey w3-padding-16"><i class="fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Timeline</h2>
         <div class="w3-container">
           <ng-container *ngFor="let message of profile.messages">
-            <h5 class="w3-opacity"><b>{{message.poster}}</b></h5>
+            <h5 class="w3-opacity"><b><img src="{{message.posterImage}}" style="width:5%">{{message.poster}}</b></h5>
             <p>{{message.content}}</p>
-            <p><i *ngIf="currentUserId != profile.id" class="fa fa-thumbs-o-up" aria-hidden="true"></i>  <i *ngIf="role==='moderator'|| role === 'admin'" class="fa fa-exclamation-triangle" aria-hidden="true"></i></p>
+            <p><i *ngIf="currentUserId != message.posterId" class="fa fa-thumbs-o-up" aria-hidden="true"></i>  <i *ngIf="currentUserId != message.posterId" class="fa fa-exclamation-triangle" aria-hidden="true"></i></p>
             <hr>
           </ng-container>
           <div *ngIf="loggedIn">
