--- a/Kwetter/KwetterAngular/src/app/app.component.html
+++ b/Kwetter/KwetterAngular/src/app/app.component.html
@@ -4,6 +4,7 @@
     <li><a routerLink="" style="font-weight: bold; font-size: 20px;">{{title}}</a></li>
     <li><a routerLink="/login">Login</a></li>
     <li><a routerLink="/profile">Profile</a></li>
+    <li><a routerLink="/login">Logout</a></li>
   </ul>
 </nav>
 <router-outlet></router-outlet>
